fixed container alignments and styled/added buttons

--- a/src/components/pages/home/home.scss
+++ b/src/components/pages/home/home.scss
@@ -1,6 +1,12 @@
+.intro-wrapper {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+}
+
 .introduction {
-  position: absolute;
-  right: 23%;
+  padding: 0px 100px 200px 0px;
+  max-width: 400px;
 }
 
 .introduction h1 {
@@ -12,4 +18,14 @@
   font-size: 18px;
   margin: 10px 0px;
   padding-bottom: 20px;
+}
+
+.custom-description {
+  display: inline-grid;
+  padding: 0px 100px 150px 0px;
+  max-width: 400px;
+}
+
+.description-container {
+  padding-bottom: 50px;
 }
