--- a/src/index.scss
+++ b/src/index.scss
@@ -20,24 +20,25 @@ p {
   height: 100vh;
   width: 100vw;
   scroll-snap-align: start;
+  display: flex;
+  align-items: center;
 }
 
 .project-wrapper {
   display: flex;
-  position: relative;
-  top: 25%;
+  align-items: center;
+  margin: 0 auto;
 }
 
-.intro-wrapper {
+.flag-group {
   display: flex;
-  position: relative;
-  top: 25%;
+  width: 700px;
 }
 
 .flag {
-  position: absolute;
-  left: 15%;
+  position: relative;
   z-index: 1;
+  left: 20%;
 }
 
 .flag img {
@@ -53,57 +54,42 @@ button {
   cursor: pointer;
 
   &:hover {
-    background-color: #4caf50; /* Green */
+    background-color: #1d1f23;
+    border: 1px solid white;
     color: white;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
       0 17px 50px 0 rgba(0, 0, 0, 0.19);
   }
 }
 
-.custom-description {
-  position: absolute;
-  right: 15%;
-}
-
 .letter {
+  position: relative;
   text-transform: uppercase;
-  position: absolute;
   font-size: 350px;
   font-weight: 700;
-  left: 5%;
-  padding-top: 20px;
+  color: black;
 }
 
-.e {
-  left: 30%;
+.d {
+  right: 50%;
 }
 
-.s {
-  top: -220px;
+.s,
+.n {
+  top: -200px;
+  right: 50%;
 }
 
 .i {
-  left: 10%;
-}
-
-.g {
-  left: 30%;
-}
-
-.n {
-  top: -200px;
+  right: 40%;
 }
 
 .t {
   left: 8%;
 }
 
-.u {
-  top: -200px;
-  left: 30%;
-}
-
+.u,
 .y {
   top: -200px;
-  left: 30%;
+  left: 5%;
 }
